Set turn-choice button colour explicitly to fix bug where text is blue on ios (untested)

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -481,6 +481,7 @@ body {
   padding: 10px 14px;
   border: none;
   background-color: #ffbc00;
+  color: #000000;
 }
 
 .turn-choice__btn--item {
